# AIKO-bot

./: AIKO.py  Dockerfile  Procfile  README.md  install.sh  pyproject.toml  render.yaml  requirements.txt  web.py
